fix issue with line bumping into register button on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -199,6 +199,7 @@ body {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
+  margin-bottom: 10px;
 }
 
 .button:hover {
